Feature #59011 New plannings and use of iCalendar events